---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  <<256, 4, x, \"Gleam\":utf8>>\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  <<256, 4, x, "Gleam":utf8>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, stringBits } from "../gleam.mjs";

export function go(x) {
  return toBitArray([0, 4, x, stringBits("Gleam")]);
}
